--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.10",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "leaflet": "^1.9.4",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/google.maps": "^3.58.1",
     "@types/jsdom": "^21.1.7",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^22.17.0",
