Implement to front end (missing vehicle registration growth) feat: CBD population view (live) + vehicles placeholder; proxy/CORS fixes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "vue": "^3.5.18",
     "vue-chartjs": "^5.3.2",
     "vue-leaflet": "^0.1.0",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "chart.js": "^4.4.4"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
