--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://3.87.131.172
+VITE_API_BASE_URL=https://api-tp41.xyz/
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyCefliCllZHH9ey-7qfkVM0uvYio02FxDQ
